{
    "version": 1,
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "main",
            "id": "275f0bfa-a3ee-4439-8c93-8bcb780e98ae",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "53074d9f-8c11-4e22-b6a5-e5437877baa5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WelcomeOn",
                    "type": "Button",
                    "id": "7a2f918e-3da1-4081-92d0-b9e0ec42057c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WelcomeOff",
                    "type": "Button",
                    "id": "91dc75ae-0550-403f-8729-64dd3eedf4b6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "bd839e63-4552-4d26-8267-d09369dc85ed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "79ce3d18-deb7-4208-a520-5d4c102736fd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bd0838d2-d265-4ead-9fb8-e4c38e642d3c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3ff36b92-adc7-4e4e-b1e4-394b202c6c92",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "07607cfe-5078-4039-801c-ef28e8611b4b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "88531d8f-7c77-49c7-b246-5ca0d67eb9e5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c6c76690-e128-4217-a9ea-7586abc81f90",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WelcomeOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d94b6cf1-27f5-4a08-8e45-d3fec85ad832",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WelcomeOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23f35ff9-73f1-436e-b292-34d7ddb749e5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}